[gd_scene load_steps=11 format=3 uid="uid://h4w7o8n67aqc"]

[ext_resource type="Script" path="res://scenes/celestial_aberration/celestial_aberration.gd" id="1_5uy6q"]
[ext_resource type="Script" path="res://scenes/celestial_aberration/ik_target.gd" id="2_jq0vq"]
[ext_resource type="Texture2D" uid="uid://bab2euxhn777p" path="res://assets/Celestial_Aberration_Pieces.png" id="2_rt3wt"]
[ext_resource type="Script" path="res://addons/Souperior 2D Skeleton Modifications/Animatinators/soup_stack.gd" id="3_wt7dq"]
[ext_resource type="Script" path="res://addons/Souperior 2D Skeleton Modifications/Animatinators/soup_sub_stack.gd" id="4_oj4oi"]
[ext_resource type="Script" path="res://addons/Souperior 2D Skeleton Modifications/Animatinators/Modifications/soup_two_bone_ik.gd" id="5_add7p"]
[ext_resource type="Script" path="res://addons/Souperior 2D Skeleton Modifications/Animatinators/Modifications/soup_look_at.gd" id="6_1na2o"]
[ext_resource type="Script" path="res://scenes/celestial_aberration/step_ray.gd" id="7_56yno"]
[ext_resource type="Script" path="res://scenes/celestial_aberration/step_targets.gd" id="8_eceil"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1bvs5"]
size = Vector2(66, 46)

[node name="CelestialAberration" type="Node2D"]
position = Vector2(15, -7)
script = ExtResource("1_5uy6q")

[node name="HurtBox" type="Area2D" parent="."]
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-16, 7)
shape = SubResource("RectangleShape2D_1bvs5")
debug_color = Color(0.498039, 0.580392, 0, 0.419608)

[node name="LegBIKTarget" type="Marker2D" parent="." node_paths=PackedStringArray("step_target", "other")]
top_level = true
position = Vector2(11, 23)
script = ExtResource("2_jq0vq")
step_target = NodePath("../StepTargets/LegBRay/LegBStepTarget")
other = NodePath("../LegFIKTarget")

[node name="FootLookAtTargetB" type="Marker2D" parent="LegBIKTarget"]
position = Vector2(0, 4)

[node name="LegFIKTarget" type="Marker2D" parent="." node_paths=PackedStringArray("step_target", "other")]
top_level = true
position = Vector2(-1, 23)
script = ExtResource("2_jq0vq")
step_target = NodePath("../StepTargets/LegFRay/LegFStepTarget")
other = NodePath("../LegBIKTarget")

[node name="FootLookAtTargetF" type="Marker2D" parent="LegFIKTarget"]
position = Vector2(0, 4)

[node name="NeckIKTarget" type="Marker2D" parent="."]
position = Vector2(-28, -2)

[node name="HeadLookAtTarget" type="Marker2D" parent="NeckIKTarget"]
position = Vector2(-21, 4)

[node name="parts" type="Node2D" parent="."]

[node name="LegF" type="Node" parent="parts"]

[node name="Upper" type="Sprite2D" parent="parts/LegF"]
position = Vector2(-0.428298, 8.38635)
rotation = -1.09461
scale = Vector2(0.999997, 0.999997)
texture = ExtResource("2_rt3wt")
centered = false
region_enabled = true
region_rect = Rect2(50.4037, 81.5392, 15.2697, 14.7292)

[node name="Lower" type="Sprite2D" parent="parts/LegF"]
position = Vector2(-0.136338, 9.98673)
rotation = 0.142718
scale = Vector2(0.999995, 0.999995)
texture = ExtResource("2_rt3wt")
centered = false
region_enabled = true
region_rect = Rect2(51, 82, 14, 14)

[node name="Foot" type="Sprite2D" parent="parts/LegF"]
position = Vector2(-8.49326, 20.9884)
rotation = 0.00111555
scale = Vector2(0.999995, 0.999995)
texture = ExtResource("2_rt3wt")
centered = false
region_enabled = true
region_rect = Rect2(41, 99, 11, 5)

[node name="LegB" type="Node" parent="parts"]

[node name="Upper" type="Sprite2D" parent="parts/LegB"]
position = Vector2(6.01898, 10.7572)
rotation = -1.51082
scale = Vector2(0.999997, 0.999997)
texture = ExtResource("2_rt3wt")
centered = false
region_enabled = true
region_rect = Rect2(50.4037, 81.5392, 15.2697, 14.7292)

[node name="Lower" type="Sprite2D" parent="parts/LegB"]
position = Vector2(6.75646, 10.6719)
rotation = -0.254754
scale = Vector2(0.999996, 0.999996)
texture = ExtResource("2_rt3wt")
centered = false
region_enabled = true
region_rect = Rect2(51, 82, 14, 14)

[node name="Foot" type="Sprite2D" parent="parts/LegB"]
position = Vector2(3.50003, 21)
scale = Vector2(0.999996, 0.999996)
texture = ExtResource("2_rt3wt")
centered = false
region_enabled = true
region_rect = Rect2(41, 99, 11, 5)

[node name="Body" type="Node" parent="parts"]

[node name="Body" type="Sprite2D" parent="parts/Body"]
position = Vector2(-20.4242, -13.4128)
rotation = 0.179088
scale = Vector2(0.999998, 0.999998)
texture = ExtResource("2_rt3wt")
centered = false
region_enabled = true
region_rect = Rect2(12, 54, 36, 22)

[node name="Neck" type="Sprite2D" parent="parts/Body"]
position = Vector2(-19.5496, -10.7285)
rotation = 0.0796987
scale = Vector2(0.999996, 0.999996)
texture = ExtResource("2_rt3wt")
centered = false
region_enabled = true
region_rect = Rect2(14, 85, 9, 13)

[node name="Head" type="Node" parent="parts"]

[node name="Head" type="Sprite2D" parent="parts/Head"]
position = Vector2(-13.42, -12.4596)
rotation = 0.252687
scale = Vector2(0.999995, 0.999995)
texture = ExtResource("2_rt3wt")
region_enabled = true
region_rect = Rect2(62, 19, 27, 21)

[node name="skeleton" type="Skeleton2D" parent="."]

[node name="Stack" type="Node" parent="skeleton"]
script = ExtResource("3_wt7dq")

[node name="Body" type="Node" parent="skeleton/Stack"]
script = ExtResource("4_oj4oi")

[node name="BodyNeck" type="Node" parent="skeleton/Stack/Body" node_paths=PackedStringArray("target_node", "joint_one_bone_node", "joint_two_bone_node", "chain_tip")]
script = ExtResource("5_add7p")
target_node = NodePath("../../../../NeckIKTarget")
enabled = true
flip_bend_direction = true
softness = 0.2
joint_one_bone_node = NodePath("../../../Body")
joint_two_bone_node = NodePath("../../../Body/Neck")
chain_tip = NodePath("../../../Body/Neck/Head")

[node name="SoupLookAt" type="Node" parent="skeleton/Stack/Body" node_paths=PackedStringArray("target_node", "bone_node")]
script = ExtResource("6_1na2o")
target_node = NodePath("../../../../NeckIKTarget/HeadLookAtTarget")
enabled = true
bone_node = NodePath("../../../Body/Neck/Head")
use_easing = true

[node name="LegF" type="Node" parent="skeleton/Stack"]
script = ExtResource("4_oj4oi")

[node name="Leg" type="Node" parent="skeleton/Stack/LegF" node_paths=PackedStringArray("target_node", "joint_one_bone_node", "joint_two_bone_node", "chain_tip")]
script = ExtResource("5_add7p")
target_node = NodePath("../../../../LegFIKTarget")
enabled = true
flip_bend_direction = true
softness = 0.2
joint_one_bone_node = NodePath("../../../Body/UpperF")
joint_two_bone_node = NodePath("../../../Body/UpperF/LowerF")
chain_tip = NodePath("../../../Body/UpperF/LowerF/FootF")

[node name="SoupLookAt" type="Node" parent="skeleton/Stack/LegF" node_paths=PackedStringArray("target_node", "bone_node")]
script = ExtResource("6_1na2o")
target_node = NodePath("../../../../LegFIKTarget/FootLookAtTargetF")
enabled = true
bone_node = NodePath("../../../Body/UpperF/LowerF/FootF")

[node name="LegB" type="Node" parent="skeleton/Stack"]
script = ExtResource("4_oj4oi")

[node name="Leg" type="Node" parent="skeleton/Stack/LegB" node_paths=PackedStringArray("target_node", "joint_one_bone_node", "joint_two_bone_node", "chain_tip")]
script = ExtResource("5_add7p")
target_node = NodePath("../../../../LegBIKTarget")
enabled = true
flip_bend_direction = true
softness = 0.2
joint_one_bone_node = NodePath("../../../Body/UpperB")
joint_two_bone_node = NodePath("../../../Body/UpperB/LowerB")
chain_tip = NodePath("../../../Body/UpperB/LowerB/FootB")

[node name="SoupLookAt" type="Node" parent="skeleton/Stack/LegB" node_paths=PackedStringArray("target_node", "bone_node")]
script = ExtResource("6_1na2o")
target_node = NodePath("../../../../LegBIKTarget/FootLookAtTargetB")
enabled = true
bone_node = NodePath("../../../Body/UpperB/LowerB/FootB")

[node name="Body" type="Bone2D" parent="skeleton"]
rotation = 0.179088
scale = Vector2(0.999998, 0.999998)
rest = Transform2D(0.992145, 0.125086, -0.125086, 0.992145, 0, 0)
editor_settings/show_bone_gizmo = false

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="skeleton/Body"]
position = Vector2(-36, 0)
remote_path = NodePath("../../../parts/Body/Body")

[node name="UpperB" type="Bone2D" parent="skeleton/Body"]
position = Vector2(-6.75489, 5.32649)
rotation = -3.02858
scale = Vector2(0.999999, 0.999999)
rest = Transform2D(-0.979763, 0.200158, -0.200158, -0.979763, -6.75489, 5.32649)
editor_settings/show_bone_gizmo = false

[node name="RemoteTransform2D2" type="RemoteTransform2D" parent="skeleton/Body/UpperB"]
position = Vector2(-2.624, -13.537)
rotation = 1.33867
remote_path = NodePath("../../../../parts/LegB/Upper")

[node name="LowerB" type="Bone2D" parent="skeleton/Body/UpperB"]
position = Vector2(-15.0016, -7.56843)
rotation = 2.59473
scale = Vector2(0.999999, 0.999999)
rest = Transform2D(-0.962408, 0.271604, -0.271604, -0.962408, -15.0016, -7.56843)
editor_settings/show_bone_gizmo = false

[node name="RemoteTransform2D3" type="RemoteTransform2D" parent="skeleton/Body/UpperB/LowerB"]
position = Vector2(-12.941, -1.235)
remote_path = NodePath("../../../../../parts/LegB/Lower")

[node name="FootB" type="Bone2D" parent="skeleton/Body/UpperB/LowerB"]
position = Vector2(-11.9412, 11.7647)
rotation = 0.254754
scale = Vector2(1, 1)
rest = Transform2D(0.824962, 0.565187, -0.565187, 0.824962, -11.9412, 11.7647)
auto_calculate_length_and_angle = false
length = 4.0
bone_angle = 90.0
editor_settings/show_bone_gizmo = false

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="skeleton/Body/UpperB/LowerB/FootB"]
position = Vector2(-7.5, -2)
remote_path = NodePath("../../../../../../parts/LegB/Foot")

[node name="UpperF" type="Bone2D" parent="skeleton/Body"]
position = Vector2(-6.75489, 5.32649)
rotation = -2.5251
scale = Vector2(0.999999, 0.999999)
rest = Transform2D(-0.988806, -0.149207, 0.149207, -0.988806, -6.75489, 5.32649)
editor_settings/show_bone_gizmo = false

[node name="RemoteTransform2D2" type="RemoteTransform2D" parent="skeleton/Body/UpperF"]
position = Vector2(-2.624, -13.537)
rotation = 1.2514
remote_path = NodePath("../../../../parts/LegF/Upper")

[node name="LowerF" type="Bone2D" parent="skeleton/Body/UpperF"]
position = Vector2(-15.0016, -7.56843)
rotation = 2.48873
scale = Vector2(0.999998, 0.999998)
rest = Transform2D(-0.996942, 0.0781352, -0.0781352, -0.996942, -15.0016, -7.56843)
editor_settings/show_bone_gizmo = false

[node name="RemoteTransform2D3" type="RemoteTransform2D" parent="skeleton/Body/UpperF/LowerF"]
position = Vector2(-12.9412, -1.23528)
remote_path = NodePath("../../../../../parts/LegF/Lower")

[node name="FootF" type="Bone2D" parent="skeleton/Body/UpperF/LowerF"]
position = Vector2(-11.9412, 11.7647)
rotation = -0.141602
rest = Transform2D(0.997728, -0.0673782, 0.0673782, 0.997728, -11.9412, 11.7647)
auto_calculate_length_and_angle = false
length = 4.0
bone_angle = 90.0
editor_settings/show_bone_gizmo = false

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="skeleton/Body/UpperF/LowerF/FootF"]
position = Vector2(-7.5, -2)
remote_path = NodePath("../../../../../../parts/LegF/Foot")

[node name="Neck" type="Bone2D" parent="skeleton/Body"]
position = Vector2(-33.0711, 15.1096)
rotation = -1.26566
scale = Vector2(0.999998, 0.999998)
rest = Transform2D(0.478979, -0.877826, 0.877826, 0.478979, -33.0711, 15.1096)
editor_settings/show_bone_gizmo = false

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="skeleton/Body/Neck"]
position = Vector2(11.5632, -5.30929)
rotation = 1.16627
remote_path = NodePath("../../../../parts/Body/Neck")

[node name="Head" type="Bone2D" parent="skeleton/Body/Neck"]
position = Vector2(13.0824, 1.29203)
rotation = -2.17584
scale = Vector2(0.999999, 0.999999)
rest = Transform2D(-0.691015, -0.72284, 0.72284, -0.691015, 13.0824, 1.29203)
auto_calculate_length_and_angle = false
length = 16.0
bone_angle = -3.86205
editor_settings/show_bone_gizmo = false

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="skeleton/Body/Neck/Head"]
position = Vector2(0, 3.485)
rotation = -2.76809
remote_path = NodePath("../../../../../parts/Head/Head")

[node name="StepTargets" type="Node2D" parent="."]
script = ExtResource("8_eceil")

[node name="LegBRay" type="RayCast2D" parent="StepTargets" node_paths=PackedStringArray("step_target")]
position = Vector2(-12, 11)
target_position = Vector2(0, 42)
hit_from_inside = true
script = ExtResource("7_56yno")
step_target = NodePath("LegBStepTarget")

[node name="LegBStepTarget" type="Marker2D" parent="StepTargets/LegBRay"]
position = Vector2(0, 19)

[node name="LegFRay" type="RayCast2D" parent="StepTargets" node_paths=PackedStringArray("step_target")]
position = Vector2(-25, 11)
target_position = Vector2(0, 42)
hit_from_inside = true
script = ExtResource("7_56yno")
step_target = NodePath("LegFStepTarget")

[node name="LegFStepTarget" type="Marker2D" parent="StepTargets/LegFRay"]
position = Vector2(0, 19)
